--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <head>
     <title>kii gkutest site</title>
 </head>
-    <h1>kii test site</h1>
-    <p>ようこそ、きいのテストサイトへ</p>
+    <h1>kii gku test site</h1>
+    <p>ようこそ、きぃのテストサイトへ</p>
 </html>
