--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>kii gkutest site</title>
+    <title>kii gku test site</title>
 </head>
     <h1>kii gku test site</h1>
-    <p>ようこそ、きぃのテストサイトへ</p>
+    <p>ようこそ、きぃのテストサイトへ!</p>
 </html>
