--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Styled Web Page</title>
     <style>
         body{background-color: #f0f8ff;}
         h1{color: #77ae47;}
