--- a/kadai4-2/index.html
+++ b/kadai4-2/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h3>問題</h3>
-    <p>日本の首都は？<button onclick="showAnser()">解答を見る</button></p>
+    <p>日本の首都は？<button onclick="showAnser();">解答を見る</button></p>
     <script>
         function showAnser() {
             let anser = '東京';
