--- a/kadai5-1/index.html
+++ b/kadai5-1/index.html
@@ -11,23 +11,23 @@
     <button onclick="subtract()">引き算</button>
     <button onclick="multiply()">掛け算</button>
     <button onclick="divide()">割り算</button>
-    <script>
-        function add() {
-            let anser = a+b;
-            alert('答えは' + anser + 'です');
-        }
-        function subtract() {
-            let anser = a-b;
-            alert('答えは' + anser + 'です');
-        }
-        function multiply() {
-            let anser = a*b;
-            alert('答えは' + anser + 'です');
-        }
-        function divide() {
-            let anser = a/b;
-            alert('答えは' + anser + 'です');
-        }
-    </script>
+<script>
+    function add() {
+        let anser = 14;
+        alert('答えは' + anser + 'です');
+    }
+    function subtract() {
+        let anser = 6;
+        alert('答えは' + anser + 'です');
+    }
+    function multiply() {
+        let anser = 40;
+        alert('答えは' + anser + 'です');
+    }
+    function divide() {
+        let anser = 2.5;
+        alert('答えは' + anser + 'です');
+    }
+</script>
 </body>
 </html>
