--- a/kadai5-2/index.html
+++ b/kadai5-2/index.html
@@ -6,27 +6,27 @@
 </head>
 <body>
     <h1>利用料の計算</h1>
-    <table border="1" border-color: "#dddddd" style="border-collapse: collapse" width="65%" height="70">
-    <tr bgcolor="#f2f2f2">
+    <table border="2" style="border-collapse: collapse" width="40%" height="160">
+    <tr bgcolor="#ffcc99">
       <th>No.</th>
       <th>料金(a)</th>
       <th>人数(b)</th>
       <th>a×b</th>
     </tr>
     <tr>
-      <td>0</td>
+      <td bgcolor="#ffcc99">0</td>
       <td>500</td>
       <td>10</td>
       <td> <button onclick="multiply_0();">利用料の合計</button></td>
     </tr>
     <tr>
-      <td>1</td>
+      <td bgcolor="#ffcc99">1</td>
       <td>980</td>
       <td>16</td>
       <td> <button onclick="multiply_0();">利用料の合計</button></td>
     </tr>
     <tr>
-      <td>2</td>
+      <td bgcolor="#ffcc99">2</td>
       <td>1200</td>
       <td>8</td>
       <td> <button onclick="multiply_0();">利用料の合計</button></td>
