--- a/kadai5-2/index.html
+++ b/kadai5-2/index.html
@@ -34,6 +34,18 @@
 <script>
     let a=[500,980,1200];
     let b=[10,16,8];
+    function multiply_0() {
+        let anser = a[0]*b[0];
+        alert('料金は' + anser + '円です');
+    }
+    function multiply_1() {
+        let anser = a[1]*b[1];
+        alert('料金は' + anser + '円です');
+    }
+    function multiply_2() {
+        let anser = a[2]*b[2];
+        alert('料金は' + anser + '円です');
+    }
 </script>
 </body>
 </html>
