--- a/kadai6-2/index.html
+++ b/kadai6-2/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <title>要素の取得と内容の変更</title>
 <style>
-    
+    span{
+        color: red;
+        font-weight: bold;
+    }
 </style>
 </head>
 <body>
     <h1>座席の予約</h1>
-    <p>東京会場<div></div id='message'>（予約受付中）</div></p>
-    <button onclick="show()">予約する</button>
+    <p>東京会場<span id='yoyaku'>（予約受付中）</span></p>
+    <button id="button">予約する</button>
+    <p id="message" style="display:none; font-weight:bold;">ありがとうございました。</p>
 
 <script>
-    function show() {
-        let anserBox = document.getElementById('message');
-        anserBox.textContent = 'ありがとうございました。';
-    }
+    document.getElementById('button').addEventListener('click', function() {
+        document.getElementById('yoyaku').textContent = '（予約済み）';
+        document.getElementById('button').style.display = 'none';
+        document.getElementById('message').style.display = 'block';
+        });
 </script>
 </body>
 </html>
