--- a/kadai13/index.html
+++ b/kadai13/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>関数の戻り値</title>
+<title>数値の入力とエラー処理</title>
 <style>
     #message {
         width: 500px;
